# reliability_fieldMap_gradientFlow

./: PCC_ICC_output_gsr.mat  PCC_ICC_output_nogsr.mat  README.md  Untitled.ipynb  __init__.py  setup.cfg  setup.py
PCC_example_data/data/: PCC_ICC_output.mat  PCC_gradientFlowVectors.mat
code/: all_plot_functions.py  gradient_flow_vectors.py  reliability_field_maps.py  surface_testing.py  variability_utils.py
misc/: README.md
misc/surfaces/: Example.sulc.10k_fs_LR.dscalar.nii
reliability/: Create_example_data-and-figures.ipynb  __init__.py  gradient_flow_vectors.py  reliability_field_maps.py  variability_utils.py
reliability/.ipynb_checkpoints/: Create_example_data-and-figures-checkpoint.ipynb
reliability/misc/: FileDescriptions.md
tests/: all_plot_functions.py
tutorial/: 01_reliability_field_map_sns_test.ipynb  Fieldmap_GradientFlow_tutorial.ipynb  Fieldmap_GradientFlow_tutorial_copy.ipynb  Fieldmap_GradientFlow_tutorial_function_work.ipynb  Fieldmap_GradientFlow_tutorial_version_1.1.ipynb  Fieldmap_GradientFlow_tutorial_version_1.ipynb  SurfacePlotting_gradientFlow_dICC_version_1.1.ipynb
tutorial/.ipynb_checkpoints/: 01_reliability_field_map_sns_test-checkpoint.ipynb  Fieldmap_GradientFlow_tutorial-checkpoint.ipynb  Fieldmap_GradientFlow_tutorial_copy-checkpoint.ipynb  Fieldmap_GradientFlow_tutorial_function_work-checkpoint.ipynb  Fieldmap_GradientFlow_tutorial_version_1.1-checkpoint.ipynb  SurfacePlotting_gradientFlow_dICC-checkpoint.ipynb  (+1 more)
variabilityFMGF/: gradient_flow_vectors.py  reliability_field_maps.py  variability_utils.py
(+92 files in other folders)
