[metadata]
# jae7cho:
name = reliabilityPlots-jae7cho
version = 0.0.1
author = Jae Wook Cho   
author_email = jae7cho@gmail.com
description = Package for plots in Reliability Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HumanBrainED/reliability-field-map
project_urls =
    Bug Tracker = https://github.com/HumanBrainED/reliability-field-map/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6


