[metadata]
# jae7cho:
name = variabilityFMGF
version = 1.0
author = Jae Wook Cho   
author_email = jae7cho@gmail.com
description = Package for plots in Reliability Project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jae7cho/reliability_fieldMap_gradientFlow
project_urls =
    Bug Tracker = https://github.com/jae7cho/reliability_fieldMap_gradientFlow/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6


